--- a/ML_HW1.ipynb
+++ b/ML_HW1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type":"markdown",
    "source":[
-    "### ML Homework 1 | 207850074 | 211624796\n",
+    "### ML Homework 1\n",
     "importing libraries and read data file:"
    ],
    "attachments":{},
